--- a/produtos.html
+++ b/produtos.html
@@ -4,34 +4,37 @@
     <head>
         <meta charset="UTF-8">
         <title>Produtos - Barbearia Alura</title>
+        <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="produtos.css">
     </head>
 
     <body>
         <header>
-            <h1>
-                <img src="logo.png">
-            </h1>
+            <div class="box">
+                <h1>
+                    <img src="logo.png">
+                </h1>
 
-            <nav>
-                <ul>
-                    <li>
-                        <a href="Index.html">
-                            Home
-                        </a>
-                    </li>
-                    <li>
-                        <a href="produtos.html">
-                            Produtos
-                        </a>
-                    </li>
-                    <li>
-                        <a href="contatos.html">
-                            Contatos
-                        </a>
-                    </li>
-                </ul>
-            </nav>
+                <nav>
+                    <ul>
+                        <li>
+                            <a href="Index.html">
+                                Home
+                            </a>
+                        </li>
+                        <li>
+                            <a href="produtos.html">
+                                Produtos
+                            </a>
+                        </li>
+                        <li>
+                            <a href="contatos.html">
+                                Contatos
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
         </header>
     </body>
 </html>
