--- a/produtos.html
+++ b/produtos.html
@@ -62,5 +62,10 @@
 
             </ul>
         </main>
+
+        <footer>
+            <img src="logo-branco.png">
+            <p class="copyright"> &copy; Copyright Barbearia Alura - 2023</p>
+        </footer>
     </body>
 </html>
