--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,7 @@
 		<title>Barbearia Alura</title>
 		<link rel="stylesheet" href="reset.css">
 		<link rel="stylesheet" href="style.css">
+		<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 	</head>
 
 	<body>
@@ -37,20 +38,32 @@
                 <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
 			</section>
 
-			<section class="beneficios">
-
-				<h3 class="titulo-principal">Benefícios</h3>
-
-				<ul>
-					<li class="itens">Atendimento aos Clientes</li>
-					<li class="itens">Espaço diferenciado</li>
-					<li class="itens">Localização</li>
-					<li class="itens">Profissionais Qualificados</li>
-				</ul>
-
-				<img src="beneficios.jpg" class="imagembeneficios">
-
+			<section class="mapa">
+				<h3 class="titulo-principal">"Nosso estabelecimento</h3>
+				<p>Nosso estabelecimento está localizado no coração da cidade.</p>
+				<div class="mapa-conteudo">
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3981.5475010648006!2d-38.64993994980238!3d-3.6898642439974827!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c73549603a0cbb%3A0xb89bba0ac74dbd0c!2sPaul%20Valery!5e0!3m2!1spt-BR!2sbr!4v1675343762906!5m2!1spt-BR!2sbr" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+				</div>
 			</section>
+			
+			<section class="beneficios">
+                <h3 class="titulo-principal">Benefícios</h3>
+
+				<div class="conteudo-beneficios">
+                    <ul class="lista-beneficios">
+                        <li class="itens">Atendimento aos Clientes</li>
+                        <li class="itens">Espaço diferenciado</li>
+                        <li class="itens">Localização</li>
+                        <li class="itens">Profissionais Qualificados</li>
+                        <li class="itens">Pontualidade</li>
+                        <li class="itens">Limpeza</li>
+                    </ul><img src="beneficios.jpg" class="imagem-beneficios">
+                </div>
+
+				<div class="video">
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/qBGd4J_3OJE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				</div>
+			</section>	
 		</main>
 		<footer>
 			<img src="logo-branco.png" alt="Logo da Barbearia Alura">
