--- a/JavaScript/programa.html
+++ b/JavaScript/programa.html
@@ -2,26 +2,31 @@
 
 <script>
 
+    function pularLinha() {
+        var puloLinha = "<br>";
+        document.write(puloLinha);
+    }
+
     var ano = 2023;
 
     document.write("Flávio tem " + (ano - 1977) + " anos");
-    document.write("<br>");
+    pularLinha();
     document.write("Joaquim tem " + (ano - 1996) + " anos");
-    document.write("<br>");
+    pularLinha();
     document.write("Barney tem " + (ano - 1976) + " anos");
-    document.write("<br>");
+    pularLinha();
 
-        var idadeFlavio = 39;
-        var idadeJoaquim = 20;
-        var idadeBarney = 41;
+    var idadeFlavio = 39;
+    var idadeJoaquim = 20;
+    var idadeBarney = 41;
 
-        var media = (idadeFlavio + idadeJoaquim + idadeBarney)/3;
+    var media = (idadeFlavio + idadeJoaquim + idadeBarney)/3;
 
-        document.write("A média das idades é " + Math.round(media));
+    document.write("A média das idades é " + Math.round(media));
 
-        var nome = "Flávio";
+    var nome = "Flávio";
 
-        document.write("<br>");
-        document.write("A idade de " + nome + " é " + idadeFlavio);
+    pularLinha();
+    document.write("A idade de " + nome + " é " + idadeFlavio);
 
 </script>
